deploy/k8s/base/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: idm-web
  labels:
    app.kubernetes.io/name: idm
    app.kubernetes.io/component: web
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: idm
    app.kubernetes.io/component: web
